# SDLTesting

./: 05_optimized_surface_loading_and_soft_stretching.cpp  06_extension_libraries_and_loading_other_image_formats.cpp  09_the_viewport.cpp  10_color_keying.cpp  11_clip_rendering_and_sprite_sheets.cpp  12_color_modulation.cpp  13_alpha_blending.cpp  14_animated_sprites_and_vsync.cpp  15_rotation_and_flipping.cpp  16_true_type_fonts.cpp  CMakeLists.txt  main.cpp
19_gamepads_and_joysticks/: 19_gamepads_and_joysticks.cpp
23_advanced_timers/: 23_advanced_timers.cpp
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
